--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
             <div class="card-container">
                 <div class="card card-projeto1" onclick="showImages('projeto1')">
                     <div class="card-wrapper">
-                        <h2>Projeto 1</h2>
-                        <p>!</p>
+                        <h2>Veja Mais</h2>
                     </div>
                 </div>
                 <div class="card-text">
