--- a/html/face3.html
+++ b/html/face3.html
@@ -38,7 +38,7 @@
                     <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/php/php-original.svg" alt="Database Logo">
                 </div>
                 <div class="skill-text">
-                    <span>SQL</span> & <span>SQL Databases</span> - Managing and querying data
+                    <span>PHP</span> & <span>SQL Databases</span> - Managing and querying data
                 </div>
             </div>
         </li>
