--- a/html/face1.html
+++ b/html/face1.html
@@ -1,6 +1,7 @@
 <div class="profile-section">
-    <div class="name">Jonas Gueiros,</div>
+    <div class="name">Jonas Gueiros</div>
     <div class="job-title"><span></span></div>
+
     <div class="social-links">
         <a href="https://github.com/jonasgueiros" class="social-link" title="GitHub" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
