--- a/html/face3.html
+++ b/html/face3.html
@@ -48,7 +48,7 @@
                     <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/csharp/csharp-original.svg" alt="C# Logo">
                 </div>
                 <div class="skill-text">
-                    <span>C#</span> - Version control and collaboration
+                    <span>C#</span> - Creating desktop applications and game development
                 </div>
             </div>
         </li>
