--- a/html/face2.html
+++ b/html/face2.html
@@ -1,21 +1,37 @@
 <div class="projects-section">
     <h2>Projects</h2>
     <div class="projects-container">
-        <div class="project-object" data-project="portfolio-cube">
-            <div class="project-shape cube"></div>
+        <div class="project-object">
+            <div class="project-shape">
+                <img src="project1.png" alt="Project 1">
+            </div>
         </div>
-        <div class="project-object" data-project="weather-app">
-            <div class="project-shape sphere"></div>
+        <div class="project-object">
+            <div class="project-shape">
+                <img src="project2.png" alt="Project 2">
+            </div>
         </div>
-        <div class="project-object" data-project="task-manager">
-            <div class="project-shape pyramid"></div>
+        <div class="project-object">
+            <div class="project-shape">
+                <img src="project3.png" alt="Project 3">
+            </div>
         </div>
     </div>
-    <div class="project-details" id="project-details">
-        <h3 id="project-title"></h3>
-        <p id="project-description"></p>
-        <a id="project-link" href="#" target="_blank">View on GitHub</a>
+
+    <!-- Modal -->
+    <div class="project-modal" id="projectModal">
+        <div class="modal-content">
+            <span class="modal-close">&times;</span>
+            <div class="modal-left">
+                <h2 class="modal-title"></h2>
+                <p class="modal-description"></p>
+                <p class="modal-tech"></p>
+                <a href="#" class="modal-link" target="_blank">View Project</a>
+            </div>
+            <div class="modal-right">
+                <img src="" alt="Project Image">
+            </div>
+        </div>
     </div>
 </div>
-
 <script src="js/face2.js"></script>
