--- a/html/face2.html
+++ b/html/face2.html
@@ -1,37 +1,19 @@
-<div class="projects-section">
-    <h2>Projects</h2>
-    <div class="projects-container">
-        <div class="project-object">
-            <div class="project-shape">
-                <img src="project1.png" alt="Project 1">
+<div class="projects-section">    
+    <div class="project-window">
+        <div class="project-content">
+            <div class="project-left">
+                <img id="project-image" src="../img/project1.png" alt="Project Image">
             </div>
-        </div>
-        <div class="project-object">
-            <div class="project-shape">
-                <img src="project2.png" alt="Project 2">
-            </div>
-        </div>
-        <div class="project-object">
-            <div class="project-shape">
-                <img src="project3.png" alt="Project 3">
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal -->
-    <div class="project-modal" id="projectModal">
-        <div class="modal-content">
-            <span class="modal-close">&times;</span>
-            <div class="modal-left">
-                <h2 class="modal-title"></h2>
-                <p class="modal-description"></p>
-                <p class="modal-tech"></p>
-                <a href="#" class="modal-link" target="_blank">View Project</a>
-            </div>
-            <div class="modal-right">
-                <img src="" alt="Project Image">
+            <div class="project-right">
+                <h2 id="project-title">Project 1</h2>
+                <p id="project-description">This is project 1 description.</p>
+                <div class="tech-container">
+                    <h3>Technologies Used:</h3>
+                    <p id="project-tech">HTML, CSS, JavaScript</p>
+                </div>
+                <a id="project-link" href="#project1" target="_blank" class="view-button">View Project</a>
             </div>
         </div>
     </div>
 </div>
-<script src="js/face2.js"></script>
+<script src="../js/face2.js"></script>
