--- a/html/face1.html
+++ b/html/face1.html
@@ -18,7 +18,7 @@
         <div class="profile-right">
             <div class="name">Jonas Gueiros</div>
             <div class="job-title"><span></span></div>
-            <div class="tagline">Seeking to become the best <span>version</span> of myself</div>
+            <div class="tagline">Seeking to be the best version of myself</div>
         </div>
     </div>
 </div>
