--- a/index.html
+++ b/index.html
@@ -70,25 +70,25 @@
             
             const projects = [
                 {
-                    title: "Project 1",
-                    description: "This is project 1 description.",
-                    tech: "HTML, CSS, JavaScript",
+                    title: "Expense Manager",
+                    description: "A comprehensive expense tracking solution featuring detailed entry management, SQLite-based database with custom table creation, and robust data visualization with statistical analysis and graphical expense summaries.",
+                    tech: "Python, Flet, SQLite, Matplotlib",
                     image: "../img/project1.png",
-                    link: "#project1"
+                    link: "https://github.com/jonasgueiros/expenses"
                 },
                 {
-                    title: "Project 2",
-                    description: "This is project 2 description.",
-                    tech: "React, Node.js",
-                    image: "../img/project2.jpg",
-                    link: "#project2"
+                    title: "Portfolio Website",
+                    description: "Modern 3D interactive portfolio built with vanilla JavaScript and CSS, featuring a rotating cube interface with custom animations and responsive design for all device types.",
+                    tech: "HTML5, CSS3, JavaScript",
+                    image: "../img/project2-1.jpg",
+                    link: "https://github.com/jonasgueiros/me"
                 },
                 {
-                    title: "Project 3",
-                    description: "This is project 3 description.",
-                    tech: "Python, Flask",
-                    image: "../img/project3.png",
-                    link: "#project3"
+                    title: "Task Management API",
+                    description: "RESTful API for task management with user authentication, task assignment, filtering, and sorting capabilities. Implements JWT authentication and comprehensive documentation.",
+                    tech: "Node.js, Express.js, MongoDB",
+                    image: "../img/project3-1.jpg",
+                    link: "https://github.com/jonasgueiros/task-api"
                 }
             ];
 
