--- a/html/face2.html
+++ b/html/face2.html
@@ -5,11 +5,11 @@
                 <img id="project-image" src="../img/project1.png" alt="Project Image">
             </div>
             <div class="project-right">
-                <h2 id="project-title">Project 1</h2>
-                <p id="project-description">This is project 1 description.</p>
+                <h2 id="project-title">Expense Manager</h2>
+                <p id="project-description">A comprehensive expense tracking solution featuring detailed entry management, SQLite-based database with custom table creation, and robust data visualization with statistical analysis and graphical expense summaries.</p>
                 <div class="tech-container">
                     <h3>Technologies Used:</h3>
-                    <p id="project-tech">HTML, CSS, JavaScript</p>
+                    <p id="project-tech">Python, Flet, SQLite, Matplotlib, Pandas</p>
                 </div>
                 <a id="project-link" href="#project1" target="_blank" class="view-button">View Project</a>
             </div>
