--- a/index.html
+++ b/index.html
@@ -73,21 +73,21 @@
                     title: "Expense Manager",
                     description: "A comprehensive expense tracking solution featuring detailed entry management, SQLite-based database with custom table creation, and robust data visualization with statistical analysis and graphical expense summaries.",
                     tech: "Python, Flet, SQLite, Matplotlib",
-                    image: "../img/project1.png",
+                    image: "img/project1.png",
                     link: "https://github.com/jonasgueiros/expenses"
                 },
                 {
                     title: "Portfolio Website",
                     description: "Modern 3D interactive portfolio built with vanilla JavaScript and CSS, featuring a rotating cube interface with custom animations and responsive design for all device types.",
                     tech: "HTML5, CSS3, JavaScript",
-                    image: "../img/project2-1.jpg",
+                    image: "img/project2-1.jpg",
                     link: "https://github.com/jonasgueiros/me"
                 },
                 {
                     title: "Task Management API",
                     description: "RESTful API for task management with user authentication, task assignment, filtering, and sorting capabilities. Implements JWT authentication and comprehensive documentation.",
                     tech: "Node.js, Express.js, MongoDB",
-                    image: "../img/project3-1.jpg",
+                    image: "project3-1.jpg",
                     link: "https://github.com/jonasgueiros/task-api"
                 }
             ];
