--- a/html/face2.html
+++ b/html/face2.html
@@ -5,15 +5,22 @@
                 <img id="project-image" src="../img/project1.png" alt="Project Image">
             </div>
             <div class="project-right">
-                <h2 id="project-title">Expense Manager</h2>
+                <h2 id="project-title"><a id="project-link" href="#project1" target="_blank">Expense Manager</a></h2>
                 <p id="project-description">A comprehensive expense tracking solution featuring detailed entry management, SQLite-based database with custom table creation, and robust data visualization with statistical analysis and graphical expense summaries.</p>
                 <div class="tech-container">
                     <h3>Technologies Used:</h3>
-                    <p id="project-tech">Python, Flet, SQLite, Matplotlib, Pandas</p>
+                    <ul id="project-tech" class="skills-list">
+                        <li>
+                            <div class="skill-item">
+                                <div class="skill-icon">
+                                    <img src="" alt="Tech Logo">
+                                </div>
+                                <div class="skill-text"><span></span></div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-                <a id="project-link" href="#project1" target="_blank" class="view-button">View Project</a>
             </div>
         </div>
     </div>
 </div>
-<script src="../js/face2.js"></script>
