--- a/html/face2.html
+++ b/html/face2.html
@@ -5,10 +5,10 @@
                 <img id="project-image" src="../img/project1.png" alt="Project Image">
             </div>
             <div class="project-right">
-                <h2 id="project-title"><a id="project-link" href="#project1" target="_blank">Expense Manager</a></h2>
+                <h2 id="project-title"><a id="project-link" href="#project1" target="_blank">1/4 Expense Manager</a></h2>
                 <p id="project-description">A comprehensive expense tracking solution featuring detailed entry management, SQLite-based database with custom table creation, and robust data visualization with statistical analysis and graphical expense summaries.</p>
                 <div class="tech-container">
-                    <h3>Technologies Used:</h3>
+                    <h3></h3>
                     <ul id="project-tech" class="skills-list">
                         <li>
                             <div class="skill-item">
